5.0/fa/4-methodology.rst
اتخاذ یک متدولوژی
================================

تدریس، تکرارکردن یک چیز به صورت چنیدن باره است. قول می‌دهم که همچین کاری را انجام ندهم. در پایان هر گام، شما می‌توانید یک رقص کوچک انجام داده و کارتان را ذخیره کنید. این شبیه گرفتن ``Ctrl+S`` است ولی برای یک وب‌سایت.

پیاده‌سازی یک راهبرد Git
-------------------------------------------

.. index::
    single: Git;add
    single: Git;commit

در پایان هر گام، commit‌کردن تغییراتتان را فراموش نکنید:

.. code-block:: bash
    :class: ignore

    $ git add .
    $ git commit -m'Add some new feature'

می‌توانید بدون نگرانی همه‌چیز را به Git بیافزایید زیرا سیمفونی یک فایل ``.gitignore`` را برای شما مدیریت می‌کند و هر بسته می‌تواند پیکربندی‌های بیشتری را به آن بیافزاید. به محتوای کنونی آن نگاهی بیاندازید:

.. code-block:: text
    :caption: .gitignore
    :class: ignore
    :emphasize-lines: 1,8

    ###> symfony/framework-bundle ###
    /.env.local
    /.env.local.php
    /.env.*.local
    /public/bundles/
    /var/
    /vendor/
    ###< symfony/framework-bundle ###

رشته‌های (strings) خنده‌دار، نشانه‌هایی هستند که توسط سیمفونی Flex اضافه شده‌اند تا در صورتی که تصمیم به حذف یک وابستگی گرفتید، بداند که چه چیزی را باید حذف کند. قبلاً هم گفته بودم که تمام کارهای خسته‌کننده توسط سیمفونی انجام می‌شود، نه شما.

pushکردن مخزن خود به یک سرور، کار بسیار خوبی است. GitHub، GitLab یا Bitbucket گزینه‌های خوبی هستند.

اگر پروژه خود را بر روی SymfonyCloud مستقر می کنید، پس یک کپی از مخزن Git موجود است، اما نباید به آن تکیه کنید. این کپی تنها برای استقرار مورد استفاده قرار می‌گیرد و یک نسخه‌ی پشتیبان نیست.

استقرار در محیط عمل‌آوری به صورت مستمر
-----------------------------------------------------------------------

.. index::
    single: Symfony CLI;deploy

یک عادت خوب دیگر، استقرار مکرر است. مستقرکردن در پایان هر گام، دارای بسامد مناسبی است (نه خیلی تندتند است نه خیلی دیربه‌دیر):

.. code-block:: bash
    :class: ignore

    $ symfony deploy
