8.1/fa/4-methodology.rst
اتخاذ یک متدولوژی
================================

تدریس، تکرارکردن یک چیز به صورت چنیدن باره است. قول می‌دهم که همچین کاری را انجام ندهم. در پایان هر گام، شما می‌توانید یک رقص کوچک انجام داده و کارتان را ذخیره کنید. این شبیه گرفتن ``Ctrl+S`` است ولی برای یک وب‌سایت.

پیاده‌سازی یک راهبرد Git
-------------------------------------------

.. index::
    single: Git;add
    single: Git;commit

در پایان هر گام، commit‌کردن تغییراتتان را فراموش نکنید:

.. code-block:: terminal
    :class: ignore

    $ git add .
    $ git commit -m'Add some new feature'

می‌توانید بدون نگرانی همه‌چیز را به Git بیافزایید زیرا سیمفونی یک فایل ``.gitignore`` را برای شما مدیریت می‌کند و هر بسته می‌تواند پیکربندی‌های بیشتری را به آن بیافزاید. به محتوای کنونی آن نگاهی بیاندازید:

.. code-block:: text
    :caption: .gitignore
    :class: ignore
    :emphasize-lines: 1,9

    ###> symfony/framework-bundle ###
    /.env.local
    /.env.local.php
    /.env.*.local
    /config/secrets/prod/prod.decrypt.private.php
    /public/bundles/
    /var/
    /vendor/
    ###< symfony/framework-bundle ###

رشته‌های (strings) خنده‌دار، نشانه‌هایی هستند که توسط سیمفونی Flex اضافه شده‌اند تا در صورتی که تصمیم به حذف یک وابستگی گرفتید، بداند که چه چیزی را باید حذف کند. قبلاً هم گفته بودم که تمام کارهای خسته‌کننده توسط سیمفونی انجام می‌شود، نه شما.

pushکردن مخزن خود به یک سرور، کار بسیار خوبی است. GitHub، GitLab یا Bitbucket گزینه‌های خوبی هستند.

.. note::

    اگر پروژه خود را بر روی Upsun مستقر می‌کنید، از پیش یک کپی از مخزن Git را در اختیار دارید، زیرا Upsun هنگام استفاده از ``cloud:push`` در پشت صحنه از Git بهره می‌برد. اما نباید به مخزن Git مربوط به Upsun تکیه کنید. این کپی تنها برای استقرار مورد استفاده قرار می‌گیرد و یک نسخه‌ی پشتیبان نیست.

استقرار در محیط عمل‌آوری به صورت مستمر
-----------------------------------------------------------------------

.. index::
    single: Symfony CLI;cloud:push

یک عادت خوب دیگر، استقرار مکرر است. مستقرکردن در پایان هر گام، دارای بسامد مناسبی است (نه خیلی تندتند است نه خیلی دیربه‌دیر):

.. code-block:: terminal
    :class: ignore

    $ symfony cloud:push
